# ChangeLog for net-wireless/ipw2200
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200/Attic/ChangeLog,v 1.31 2005/05/05 19:57:16 brix Exp $

  05 May 2005; <brix@gentoo.org> +files/ipw2200-1.0.3-suspend2.patch,
  ipw2200-1.0.3.ebuild:
  Allow compiling against Software Suspend 2.1.8.7 patched kernel,
  restructured ebuild.

  04 May 2005; <brix@gentoo.org> ipw2200-1.0.3.ebuild:
  Stable on x86.

  28 Apr 2005; <brix@gentoo.org> ipw2200-1.0.2-r1.ebuild:
  Stable on x86.

*ipw2200-1.0.3 (08 Apr 2005)

  08 Apr 2005; <brix@gentoo.org> +ipw2200-1.0.3.ebuild:
  Version bump.

*ipw2200-1.0.2-r1 (05 Apr 2005)

  05 Apr 2005; <brix@gentoo.org> +ipw2200-1.0.2-r1.ebuild:
  Fix problem with wrong tarball propagated on sf.net

*ipw2200-1.0.2 (25 Mar 2005)

  25 Mar 2005; <brix@gentoo.org> ipw2200-1.0.1.ebuild, +ipw2200-1.0.2.ebuild:
  Version bump and fix for bug #84508.

  12 Mar 2005; Henrik Brix Andersen <brix@gentoo.org> -ipw2200-1.0.0.ebuild:
  Pruned old version.

  02 Mar 2005; Henrik Brix Andersen <brix@gentoo.org> ipw2200-1.0.1.ebuild:
  Stable on x86.

  25 Feb 2005; Simon Stelling <blubb@gentoo.org> ipw2200-1.0.1.ebuild:
  added ~amd64

  10 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> -ipw2200-0.11.ebuild,
  -ipw2200-0.12.ebuild, -ipw2200-0.13.ebuild, -ipw2200-0.15.ebuild,
  -ipw2200-0.16.ebuild, -ipw2200-0.17.ebuild, -ipw2200-0.18.ebuild,
  -ipw2200-0.19.ebuild, -ipw2200-0.21.ebuild:
  Pruned old versions.

*ipw2200-1.0.1 (08 Feb 2005)

  08 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> +ipw2200-1.0.1.ebuild:
  Version bump. This version includes preliminary WPA support.

  01 Feb 2005; Henrik Brix Andersen <brix@gentoo.org> metadata.xml:
  Transferred ownership to brix@gentoo.org.

  01 Feb 2005; Jeremy Maitin-Shepard <jbms@gentoo.org> ipw2200-1.0.0.ebuild:
  Replaced the ebuild with the correct version of the v 0.21 ebuild.

*ipw2200-1.0.0 (01 Feb 2005)
