@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/ipw2200
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200/Attic/ChangeLog,v 1.31 2005/05/05 19:57:16 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2200/Attic/ChangeLog,v 1.32 2005/05/15 09:22:38 brix Exp $
+
+  15 May 2005; <brix@gentoo.org> -ipw2200-1.0.1.ebuild,
+  -ipw2200-1.0.2.ebuild, -ipw2200-1.0.2-r1.ebuild:
+  Pruned old ebuilds.
 
   05 May 2005; <brix@gentoo.org> +files/ipw2200-1.0.3-suspend2.patch,
   ipw2200-1.0.3.ebuild:
